# nv

./: .gitattributes  .gitignore  .merlin  .ocamlformat  .travis.yml  LICENSE  Makefile  README.md  TODO.txt  _tags  dependencies.py  dune-project  dune-workspace  gen_part_nv.py  kiribench.py  kirigami-results-v.csv  kirigami-results.csv  nv.opam  nv.opam.template  pyproject.toml  pyrightconfig.json  run_kirigami_benchmarks.py  runtests.py  simulate_sp_bench.sh  sort_sp_sims.py  tabulate_sp_bench.py  update_examples.py
benchmarks/: benchmark_fault_tolerance_1.sh  benchmark_fault_tolerance_2.sh  benchmark_fault_tolerance_2_results  benchmark_fault_tolerance_4.sh  benchmark_fault_tolerance_all_prefixes.sh  benchmark_fault_tolerance_scaling.sh  benchmark_fault_tolerance_scaling_results  benchmark_kirigami_ap.txt  benchmark_kirigami_fatpol.txt  benchmark_kirigami_maint.txt  benchmark_kirigami_rand.txt  benchmark_kirigami_sp.txt  benchmark_simulator.sh  benchmark_simulator_output_compile  benchmark_simulator_output_interp  benchmark_smt.sh  indent.sh  readme.md
docs/: smt-classic-encoding.md
examples/: abstraction_test.nv  abstraction_test2.nv  batfish.nv  batfish2.nv  batfish3-min.nv  batfish3.nv  bgp-paper.nv  cloud.nv  dataplane.nv  debug-combine.nv  diamond-ospf.nv  diamond.nv  disagree.nv  disjoint-paths.nv  doubleRip.nv  doubleRip2.nv  doubleRip2False.nv  doubleRipFalse.nv  dual-pod.nv  edges-adds-nodes.nv  env.nv  failure.nv  failure2.nv  fat4.nv  fattree-10.nv  fattree-1000.nv  fattree-12.nv  fattree-125.nv  fattree-500.nv  fattree-links.nv  fattree-policy-1000.nv  fattree-reach-1000.nv  fattree-reach-125.nv  fattree-reach-500.nv  fattree-reach.nv  fattree.nv  fattree1000-failures-rip.nv  fattree1000_double_failures_rip.nv  fattree1000_rip.nv  fattree1000_single_failures_rip.nv  (+43 more)
hmetis/: USCarrier.dot  USCarrier.hgr  (+2 more)
lib/: Abstraction.ml  AbstractionMap.ml  AbstractionMap.mli  Console.ml  Globals.ml  Input.mli  OptimizeBranches.ml  Slicing.ml  Slicing.mli  Solution.ml  Srp.ml  Syntax.ml  Syntax.mli  Typing.ml  dune
lib/BDD/: BddFunc.mli  dune
lib/datastructures/: AdjGraph.ml  Collections.ml  Env.ml  Env.mli  IMap.ml  IMap.mli  QueueSet.ml  QueueSet.mli  Span.ml  dune
lib/datatypes/: RecordUtils.ml  Var.ml
lib/interpreter/: Interp.ml  Memoization.ml  Memoization.mli
lib/lang/: Lexer.mll  Parser.mly  Syntax.ml  Syntax.mli  Typing.ml  dune
lib/smt/: dune
lib/transformations/: Inline.ml  ToEdge.ml  TupleFlatten.ml  UnboxOptions.ml  dune  tnf.ml
lib/transformations/mapUnrolling/: MapUnrollingGuts.ml  MapUnrollingUtils.ml
lib/utils/: Collections.ml  Generators.ml  Generators.mli  Printing.ml  RecordUtils.ml  RecordUtils.mli  Visitors.ml  dune
paper/: ibgp.tex  (+9 more)
src/jupyter/: Driver.ml  Show.ml  dune  dune-project  nv-intro.ipynb  nv_jupyter.opam
src/jupyter/.ipynb_checkpoints/: nv-intro-checkpoint.ipynb
src/lib/: Abstraction.ml  Abstraction.mli  AbstractionMap.ml  AbstractionMap.mli  Failures.ml  Globals.ml  Main_defs.ml  OptimizeBranches.ml  Quickcheck.ml  Quickcheck.mli  Simulator.ml  Srp.ml  Srp.mli  SrpInteractive.ml  Typing.ml  Wellformed.ml  dune  dune-project  nv_lib.install  nv_lib.opam
src/lib/compile/: BddFuncNat.ml  BddUtilsNat.ml  Embeddings.ml  NativeBdd.ml  SrpNative.ml  Symbolics.ml  compile.ml  compileBDDs.ml  dune  loader.ml
src/lib/compression/: Abstraction.ml  Abstraction.mli  AbstractionMap.ml  AbstractionMap.mli  dune
src/lib/core/: Parser.mly  PrintingRaw.ml  Syntax.mli
src/lib/datastructures/: AdjGraph.ml  AdjGraph.mli  Env.ml  Env.mli  Hashcons.ml  Hashcons.mli  IMap.ml  IMap.mli  Integer.ml  OCamlUtils.ml  QueueSet.ml  QueueSet.mli  Span.ml  Span.mli  Var.ml  Var.mli  dune
src/lib/datatypes/: RecordUtils.ml  RecordUtils.mli  dune
src/lib/interpreter/: Interp.ml  Interp.mli  InterpPartial.ml  InterpPartial.mli  InterpPartialFull.ml  InterpPartialFull.mli  InterpUtils.ml  Memoization.ml  Memoization.mli  dune
src/lib/kirigami/: OpenAdjGraph.ml  OpenAdjGraph.mli  Partition.ml  Partition.mli  RemapSRP.ml  RemoveEdges.ml  SrpRemapping.ml  SrpRemapping.mli  TransformDecls.ml  TransformDecls.mli  dune
src/lib/lang/: Cmdline.ml  Collections.ml  Console.ml  Console.mli  Generators.ml  Generators.mli  Input.ml  Input.mli  Lexer.mll  Parser.mly  Pretty.ml  Printing.ml  Printing.mli  PrintingRaw.ml  PrintingRaw.mli  Syntax.ml  Syntax.mli  Typing.ml  Visitors.ml  Visitors.mli  dune
src/lib/lang/BDD/: BddFunc.ml  BddFunc.mli  BddMap.ml  BddMap.mli  BddUtils.ml  BddUtils.mli  NativeBdd.ml
src/lib/partitioning/: OpenAdjGraph.ml  OpenAdjGraph.mli  Partition.ml  Partition.mli  TransformDecls.ml  TransformDecls.mli
src/lib/slicing/: Slicing.ml  Slicing.mli  dune
src/lib/smt/: SMTLexer.mll  SMTParser.mly  Smt.ml  SmtBoxed.ml  SmtCheckProps.ml  SmtClassicEncoding.ml  SmtEncodingSigs.ml  SmtFunctionalEncoding.ml  SmtHiding.ml  SmtKirigami.ml  SmtLang.ml  SmtModel.ml  SmtOptimizations.ml  SmtSrp.ml  SmtUnboxed.ml  SmtUtils.ml  SolverUtil.ml  dune
src/lib/solution/: Solution.ml  Solution.mli  dune
src/lib/transformations/: AttributeSlicing.ml  AttributeSlicing.mli  CleanupTuples.ml  CleanupTuples.mli  Dependency.ml  Dependency.mli  Failures.ml  Inline.ml  Inline.mli  Mutators.ml  Mutators.mli  OptimizeBranches.ml  RecordUnrolling.ml  RecordUnrolling.mli  RenameForSMT.ml  RenameForSMT.mli  Renaming.ml  Renaming.mli  Slicing.ml  Slicing.mli  ToEdge.ml  Transformers.ml  Transformers.mli  TupleFlatten.ml  TupleFlatten.mli  UnboxEdges.ml  UnboxEdges.mli  UnboxOptions.ml  UnboxOptions.mli  UnboxUnits.ml  UnboxUnits.mli  dune  tnf.ml  tnf.mli
src/lib/transformations/kirigami/: RemapSRP.ml  RemoveEdges.ml
src/lib/transformations/mapUnrolling/: MapUnrolling.ml  MapUnrolling.mli  MapUnrollingCleanup.ml  MapUnrollingConversion.ml  MapUnrollingGuts.ml  MapUnrollingSingle.ml  MapUnrollingUtils.ml  MapUnrollingUtils.mli
src/lib/utils/: Generators.ml  Generators.mli  OCamlUtils.ml  PrimitiveCollections.ml  Printing.ml  Printing.mli  Profile.ml  RecordUtils.ml  RecordUtils.mli  Visitors.ml  Visitors.mli  Wellformed.ml  Wellformed.mli  dune
(+974 files in other folders)
