opam-version: "2.0"
name: "nv"
version: "~dev"
synopsis: "Educational materials on network verification"
maintainer: "Tim Alberdingk Thijm <tim.thijm@gmail.com>"
authors:
  "Devon Loehr <devon.loehr@gmail.com>, Nick Giannarakis <nick.giannarakis@princeton.edu>, Tim Alberdingk Thijm <tim.thijm@gmail.com>, David Walker <dpw@cs.princeton.edu>"
license: "MIT"
homepage: "https://github.com/princedpw/nv"
dev-repo: "git+https://github.com/princedpw/nv"
bug-reports: "https://github.com/princedpw/nv/issues"
depends: [
  "dune" { build }
  "odoc"
  "ounit"
  "integers"
  "ANSITerminal"
  "batteries"
  "lru-cache"
  "zarith"
  "mlcuddidl" { <= "3.0.4" }
  "ocamlgraph"
  "fileutils"
  "ppx_deriving"
  "ppx_deriving_argparse"
  "menhir"
  "parmap"
  "fix"
]
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "runtest" "-p" name "-f" "--no-buffer" "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
