opam-version: "2.0"
name: "nv"
version: "~dev"
synopsis: "Educational materials on network verification"
maintainer: "Tim Alberdingk Thijm <tim.thijm@gmail.com>"
authors:
  "Devon Loehr <devon.loehr@gmail.com>, Nick Giannarakis <nick.giannarakis@princeton.edu>, Tim Alberdingk Thijm <tim.thijm@gmail.com>, David Walker <dpw@cs.princeton.edu>"
license: "MIT"
homepage: "https://github.com/NetworkVerification/nv"
dev-repo: "git+https://github.com/NetworkVerification/nv"
bug-reports: "https://github.com/NetworkVerification/nv/issues"
depends: [
  "dune" { build }
  "ANSITerminal"
  "batteries"
  "fileutils"
  "fix"
  "integers"
  "lru-cache"
  "menhir"
  "mlcuddidl" { <= "3.0.4" }
  "ocamlgraph"
  "odoc"
  "ounit"
  "parmap"
  "ppx_deriving"
  "ppx_deriving_argparse"
  "zarith"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-f" "--no-buffer" "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
