(library
  (name lib)
  (libraries
    oUnit
    integers
    ANSITerminal
    str
    batteries
    cudd
    lru-cache
    zarith
    ocamlgraph
    fileutils)
  (preprocess
    (pps ppx_deriving.std ppx_deriving_argparse))
  ; adjust warnings slightly (see https://dev.to/yawaramin/ocaml-reasonml-best-practice-warnings-and-errors-4mkm)
  (flags (:standard -w +A-3-4-6-k-44-48 -warn-error -a))
)

(include_subdirs unqualified)

(menhir
  (modules Parser))

(ocamllex
  (modules Lexer))
