(library
  (name nv_lib)
  (public_name nv_lib)
  (libraries
    nv_lang
    nv_smt
    nv_datastructures
    nv_utils
    nv_transformations
    nv_compression
    nv_compile
    integers
    str
    batteries
    lru-cache
    zarith)
  (preprocess
    (pps ppx_deriving.std ppx_deriving_argparse))
)

(include_subdirs no)
