(library
  (name nv)
  (public_name nv)
  (modes native)
  (libraries
    nv_kirigami
    nv_lang
    nv_smt
    nv_datastructures
    nv_utils
    nv_transformations
    nv_compression
    nv_compile
    integers
    str
    batteries
    lru-cache
    zarith
    parmap)
  (preprocess
    (pps ppx_deriving.std ppx_deriving_argparse))
)

(include_subdirs no)
