(library
  (name nv_lang)
  (public_name nv_lib.lang)
  (libraries
    batteries
    fileutils
    ANSITerminal
    cudd
    integers
    nv_datastructures
    nv_utils
    totalMap
  )
  (preprocess
    (pps ppx_deriving.std ppx_deriving_argparse))
)

(menhir
  (modules Parser))

(ocamllex
  (modules Lexer))

(include_subdirs unqualified)
